<resources>
    <string name="app_name">MyBabelApplication</string>
    <string name="text_accueil">Accueil</string>
    <string name="text_newList">Créer une liste</string>
    <string name="text_profil">Profil</string>
    <string name="title_activity_main">Bonjour</string>
    <string name="title_activity_profile">Mon profil</string>
    <string name="title_activity_create_list">Créer une nouvelle liste de vocabulaire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_liste_name_placeholder">Nom de la liste</string>
    <string name="save_button">Enregistrer</string>
    <string name="error_message_list_name_empty">Le nom de votre liste ne peut pas être vide !</string>
    <string name="error_title_list_name_empty">Création de liste</string>
    <string name="placeholder_create_voc_fr">Français</string>
    <string name="placeholder_create_voc_en">Anglais</string>
    <string name="error_message_voc_create">Veuillez remplir les deux champs</string>
    <string name="error_title_voc_create">Attention !</string>
    <string name="label_show_voc_list_activity">Bienvenue sur votre liste</string>
    <string name="title_warning_exo_voc">Attention</string>
    <string name="message_warning_exo_voc">Votre réponse est vide !</string>
    <string name="label_write_exo_voc_list">Exercice de vocabulaire</string>
    <string name="label_result_exo_activity">Résultat de l\'exercice</string>
    <string name="are_you_sure_delete_list">Cela supprimera définitevement votre liste, êtes-vous sûr(e) ?</string>
    <string name="edit_button">EDITER</string>
    <string name="label_edit_list_activity">Editer une liste</string>
    <string name="label_create_list_verbs_activity">Créer une nouvelle liste de verbes</string>
    <string name="label_write_exo_verb_list_activity">Exercice de verbes irréguliers</string>
    <string name="next">Suivant</string>
    <string name="skip">Passer</string>
    <string name="start">Allons y</string>
    <string name="azertyuiop">Une de vos réponses est vide !</string>
    <string name="title_error_message_api_call">Erreur réseau</string>
    <string name="error_message_api_call">Impossible d\'obtenir une réponse de l\'API, veuillez réessayer plus tard !</string>
</resources>
