<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.babel.mybabelapplication.CreateListActivity">

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="50dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:layout_gravity="center"
            android:hint="@string/create_liste_name_placeholder"
            android:textColorHint="@color/bottomNavColor"
            android:textColor="#eb5e58"
            android:id="@+id/edit_text_voc_list_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:layout_gravity="center"
            android:hint="@string/placeholder_create_voc_fr"
            android:textColorHint="@color/bottomNavColor"
            android:textColor="#eb5e58"
            android:id="@+id/edit_text_voc_french" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:layout_gravity="center"
            android:hint="@string/placeholder_create_voc_en"
            android:textColorHint="@color/bottomNavColor"
            android:textColor="#eb5e58"
            android:id="@+id/edit_text_voc_english"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:layout_gravity="center"
            android:id="@+id/create_voc_list_button"/>
    </LinearLayout>

    <!-- Bottom nav -->
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/bottomNavColor"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main" />

    <!-- Toolbar/Actionbar on top of screen -->
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/title_activity_profile"/>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
